# climate-action-hibike

./: .env_template  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  Dockerfile  Dockerfile.Kaniko  README.md  pyproject.toml
.gitlab/: renovate.json
bikeability/: artifact.py  input.py  operator_worker.py  path_summarisation.py  plugin.py  utils.py
bikeability/components/: naturalness.py
bikeability/components/detour_factors/: detour_analysis.py
bikeability/components/dooring_risk/: dooring_artifacts.py  dooring_risk.py
bikeability/components/path_categories/: path_categories.py  path_category_artifacts.py  path_category_filters.py  path_summaries.py
bikeability/components/path_sharing/: path_sharing.py  path_sharing_artifacts.py  path_sharing_filters.py  path_summaries.py
bikeability/components/slope/: slope_analysis.py
bikeability/components/smoothness/: filters.py  smoothness.py  smoothness_artifacts.py
bikeability/components/surface_types/: surface_types.py  surface_types_artifacts.py
bikeability/components/utils/: colors.py  utils.py
bikeability/core/: input.py  operator_worker.py
bikeability/indicators/: __init__.py  detour_factors.py  dooring_risk.py  naturalness.py  path_categories.py  smoothness.py  surface_types.py
bikeability/resources/: Heidelberg_AOI.geojson
bikeability/resources/info/: purpose.md
bikeability/resources/test/: ohsome_node_response.geojson
docs/: environment_variables.md
plugin_blueprint/: artifact.py  input.py  operator_worker.py  plugin.py
resources/: __init__.py  literature.bib
resources/info/: methodology.md  purpose.md
resources/info/detour_factors/: description.md
resources/info/dooring_risk/: caption.md  description.md  summary.md
resources/info/naturalness/: description.md
resources/info/path_categories/: caption.md  description.md
resources/info/path_smoothness/: caption.md  description.md
resources/info/slope/: description.md
resources/info/surface_types/: caption.md  description.md
resources/test/: ohsome_line_and_polygon_response.geojson  ohsome_line_response.geojson  ohsome_parking_line_response.geojson  ohsome_parking_response.geojson
test/: conftest.py  test_categories.py  test_naturalness.py  test_operator_worker.py  test_path_categories.py  test_plugin.py  test_surface_types.py  test_utils.py  test_utils.test_crossings_filter.approved.txt  test_utils.test_ohsome_filter.approved.txt  test_utils.test_ohsome_filter.line.approved.txt  test_utils.test_ohsome_filter.polygon.approved.txt  test_utils.test_parking_filter.line.approved.txt  utils.py
test/components/: test_categories.py  test_detour_factors.py  test_naturalness.py  test_utils.py  test_utils.test_parking_filter.polygon.approved.txt
test/components/test_detour_factors/: test_detour_factors.py
test/components/test_dooring_risk/: test_dooring_risk.py  test_dooring_risk.test_get_dooring_risk.approved.txt  test_dooring_risk.test_get_dooring_risk_missing_geometry_types.approved.txt
test/components/test_naturalness/: test_naturalness.py
test/components/test_path_sharing/: test_path_sharing.py  (+2 more)
test/core/: test_operator_worker.py  test_plugin.py
test/resources/: ohsome_line_response.geojson  ohsome_parking_polygon_response.geojson  ohsome_polygon_response.geojson
test/test_path_categorizations/: test_dooring_risk.py  test_path_categories.py  test_smoothness.py  test_surface_types.py
(+18 files in other folders)
