[tool.poetry]
name = "Bikeability"
version = "1.1.5"
description = "The Bikeability plugin"
authors = ["Moritz Schott <moritz.schott@heigit.org>", "Maciej Adamiak <maciej.adamiak@heigit.org>", "Jonas Kemmer <jonas.kemmer@heigit.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.5"
climatoology = {git = "ssh://git@gitlab.heigit.org:2022/climate-action/climatoology.git", tag = "6.4.4"}
pydantic = "2.12.3"
pydantic-settings = "^2.1.0"
shapely = "^2.0.2"
ohsome = "^0.4.0"
matplotlib = "^3.8.3"
mobility-tools = {git = "ssh://git@gitlab.heigit.org:2022/climate-action/utilities/mobility-tools.git", rev = "1.0.3"}


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
approvaltests = "^15.0.0"
pytest-approvaltests = "^0.2.4"
responses = "^0.25.0"
pytest-cov = "^6.1.1"
ohsome-filter-to-sql = {git = "https://github.com/GIScience/ohsome-filter-to-sql.git"}


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[tool.coverage.run]
omit = ["test/*", "bikeability/input.py", "bikeability/operator_worker.py"]

[tool.ruff]
line-length = 120
[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules
select=[
    # defaults
    "F",
    "E4", "E7", "E9",

    # additional
    "A", # be sure not to shadow built-in functions
    "I", # isort to sort imports
    "N", # check for use of PEP8 naming conventions

    # docstring cleaning
    "D201", "D207", "D208", "D209", "D210", "D214", "D215", "D300", "D403",

    # auto-remove unused 'noqa' comments
    "RUF100", "RUF101",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--approvaltests-use-reporter='PythonNativeReporter'"
